# zaphod

./: .gitignore  MANIFEST.in  README.md  setup.cfg
examples/instance_folder/: README.md  config.py
examples/instance_folder/content/: project_repos.json
examples/instance_folder/content/articles/Lynx/: Whooping Crane.md
examples/instance_folder/content/articles/Lynx/Penguin/: Whale Shark.md
examples/instance_folder/content/articles/Lynx/Penguin/Vulture/: Walrus.html
examples/instance_folder/content/articles/Marmot/: Magpie.md  Octopus.md
examples/instance_folder/content/blog/: Poison Dart Frog.md  Quail.html  Siberian Tiger.md  Wild Turkey.md  Wombat.md
utils/: config.ini  utils.py
zaphod/: __init__.py  config.py  models.py
zaphod/articles/: articles.py  utils.py
zaphod/articles/templates/articles/: article.html  base.html  content_directory.html  macros.html
zaphod/blog/: blog.py  utils.py
zaphod/blog/static/css/: blog.css
zaphod/blog/templates/blog/: base.html  date_archive.html  macros.html  post.html  post_feed.html  tags_archive.html
zaphod/career/: career.py
zaphod/career/static/css/: me.css
zaphod/career/templates/career/: base.html  project.html  projects.html
zaphod/career/templates/me/: base.html  project.html
zaphod/dota/: dota.py  utils.py
zaphod/dota/static/js/: script.js
zaphod/dota/templates/dota/: all_hero_legs.html  base.html  macros.html  random_hero_legs.html
zaphod/home/: home.py
zaphod/home/static/css/: base.css  content.css  content_code_highlighting.css
zaphod/home/templates/home/: 404.html  about.html  base.html  home.html  macros.html
zaphod/me/: me.py
zaphod/me/templates/me/: base.html  project.html  projects.html
