[metadata]
name = zaphod
version = 0.0.1
url = https://github.com/ryanwarrick/zaphod
license_files = LICENSE.txt
author = Ryan Warrick
author_email = ryanwarrick1@gmail.com
description = Web app built using Python Flask for personal website functionality and learning purposes.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    gunicorn
    pytest
    lxml
    pygments
    requests
    mistune
    flask-sqlalchemy
    sqlalchemy # <=1.3.23 # Confirm if version limit is still needed.

[options.extras_require]
dev = 
    autopep8
    cleanpy
    wheel
# test =
#     pytest

# [tool:pytest]
# testpaths = tests

# [coverage:run]
# branch = True
# source =
#     zaphod

### Install Requires - Packages Requirements Trees and Descriptions ###
#
# Flask                    A simple framework for building complex web applications.
# ├── Jinja2>=3.0          A very fast and expressive template engine.
# │   └── MarkupSafe>=2.0  Safely add untrusted strings to HTML/XML markup.
# ├── Werkzeug>=2.0        The comprehensive WSGI web application library.
# ├── click>=7.1.2         Composable command line interface toolkit
# │   └── colorama         Cross-platform colored terminal text.
# └── itsdangerous>=2.0    Safely pass data to untrusted environments and back.
#
# gunicorn             WSGI HTTP Server for UNIX
# └── setuptools>=3.0  Easily download, build, install, upgrade, and uninstall Python packages
#
# pytest                     pytest: simple powerful testing with Python
# ├── atomicwrites>=1.0      Atomic file writes.
# ├── attrs>=19.2.0          Classes Without Boilerplate
# ├── colorama               Cross-platform colored terminal text.
# ├── iniconfig              iniconfig: brain-dead simple config-ini parsing
# ├── packaging              Core utilities for Python packages
# │   └── pyparsing>=2.0.2   Python parsing module
# ├── pluggy<1.0.0a1,>=0.12  plugin and hook calling mechanisms for python
# ├── py>=1.8.2              library with cross-python path, ini-parsing, io, code, log facilities
# └── toml                   Python Library for Tom's Obvious, Minimal Language
#
# lxml    Powerful and Pythonic XML processing library combining libxml2/libxslt with the ElementTree API.
#
# pygments  Pygments is a syntax highlighting package written in Python.
#
# requests                       Python HTTP for Humans.
# ├── certifi>=2017.4.17         Python package for providing Mozilla's CA Bundle.
# ├── charset-normalizer~=2.0.0  The Real First Universal Charset Detector. Open, modern and actively maintained alternative to Chardet.
# ├── idna<4,>=2.5               Internationalized Domain Names in Applications (IDNA)
# └── urllib3<1.27,>=1.21.1      HTTP library with thread-safe connection pooling, file post, and more.
#
# mistune  The fastest markdown parser in pure Python
#
# name                  summary
# --------------------  ---------------------------------------------
# sqlalchemy            Database Abstraction Library
# └── greenlet!=0.4.17  Lightweight in-process concurrent programming